# mcp-google

./: .gitignore  README.md  main.py  pyproject.toml
mcp_google/: __init__.py  calendar.py  calendar_models.py  config.py  google_chat.py  server.py
scripts/: test_calendar_setup.py  test_gmail_setup.py  test_google_chat_setup.py
